@@ -82,6 +82,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #ifdef TORRENT_USE_OPENSSL
 #include "libtorrent/ssl_stream.hpp"
 #include <boost/asio/ssl/context.hpp>
+#include <openssl/rand.h>
 #if BOOST_VERSION >= 104700
 #include <boost/asio/ssl/verify_context.hpp>
 #endif // BOOST_VERSION
