@@ -1,3 +1,4 @@
+	* OpenSSL build fixes
 	* fix DHT scrape bug
 
 1.0.3 release
